--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,3 +2,49 @@
 
 export(Al10SABI)
 export(Am092Bsub)
+export(Am09KBBI)
+export(Be162B643sub629)
+export(Be162B700sub601)
+export(Be162BsubPhy)
+export(Be16FLHBlueRedNIR)
+export(Be16FLHGreenRedNIR)
+export(Be16FLHVioletRedNIR)
+export(Be16FLHblue)
+export(Be16FLHviolet)
+export(Be16MPI)
+export(Be16NDPhyI)
+export(Be16NDPhyI644over615)
+export(Be16NDPhyI644over629)
+export(Be16NDTIblue)
+export(Be16NDTIviolet)
+export(Be16Phy2BDA644over629)
+export(Da052BDA)
+export(De933BDA)
+export(Gi033BDA)
+export(Go04MCI)
+export(HU103BDA)
+export(Kn07KIVU)
+export(Ku15PhyCI)
+export(Ku15SLH)
+export(MI092BDA)
+export(MM092BDA)
+export(MM12NDCI)
+export(MM12NDCIalt)
+export(MM143BDAopt)
+export(MM143BDAopt14)
+export(SI052BDA)
+export(SM122BDA)
+export(TurbBe16GreenPlusRedBothOverViolet)
+export(TurbBe16RedOverViolet)
+export(TurbBow06RedOverGreen)
+export(TurbChip09NIROverGreen)
+export(TurbDox02NIRoverRed)
+export(TurbFrohn09GreenPlusRedBothOverBlue)
+export(TurbHarr92NIR)
+export(TurbLath91RedOverBlue)
+export(TurbMoore80Red)
+export(Wy08CI)
+export(Zh10FLH)
+export(wq_calc)
+importFrom(raster,overlay)
+importFrom(raster,stack)
