--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: algae
 Title: The Cholorophyll-a, Blue-Green Algae, and Turbidity Detection Algorithms 
-Version: 0.0.0.9000
+Version: 0.0.1
 Authors@R: c(person("Richard", "Johansen", email = "johansra@mail.uc.edu", role = c("aut", "cre")),
     person("Jakub", "Nowosad", role = c("aut"), email="nowosad.jakub@gmail.com", comment = c(ORCID = "0000-0002-1057-3721")))
 Description: What the package does (one paragraph).
@@ -10,5 +10,6 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 Imports:
-    raster
+    raster, 
+    tibble
 RoxygenNote: 6.0.1
