--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,5 +46,7 @@ export(TurbMoore80Red)
 export(Wy08CI)
 export(Zh10FLH)
 export(wq_calc)
+importFrom(methods,is)
+importFrom(raster,nlayers)
 importFrom(raster,overlay)
 importFrom(raster,stack)
