alg docs updated

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ export(MM143BDAopt)
 export(MM143BDAopt14)
 export(SI052BDA)
 export(SM122BDA)
+export(SY002BDA)
 export(TurbBe16GreenPlusRedBothOverViolet)
 export(TurbBe16RedOverViolet)
 export(TurbBow06RedOverGreen)
