--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,3 +14,5 @@ Imports:
     raster
 RoxygenNote: 6.0.1
 Suggests: testthat
+URL: https://github.com/RAJohansen/waterquality
+BugReports: https://github.com/RAJohansen/waterquality/issues
