--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,10 @@
 Package: waterquality
 Title: Satellite Derived Water Quality Detection Algorithms
-Version: 0.0.9
-Authors@R: c(person("Richard", "Johansen", email = "johansra@mail.uc.edu", role = c("aut", "cre"), c(ORCID = "0000-0003-4287-9677")),
-    person("Jakub", "Nowosad", role = c("aut"), email="nowosad.jakub@gmail.com", comment = c(ORCID = "0000-0002-1057-3721")))
+Version: 0.0.10
+Authors@R: c(person("Richard", "Johansen", email = "johansra@mail.uc.edu", 
+    role = c("aut", "cre"), comment = c(ORCID = "0000-0003-4287-9677")),
+    person("Jakub", "Nowosad", email="nowosad.jakub@gmail.com",
+    role = c("aut"), comment = c(ORCID = "0000-0002-1057-3721")))
 Description: The goal of 'waterquality' is to convert satellite-reflectance imagery
     to a host of pre-defined water quality algorithms designed for the detection of 
     cholorophyll-a, blue-green algae (Phycocyanin), and turbidity. 
