--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,5 +1,6 @@
-pandoc: 2.1.3
-pkgdown: 1.0.0
-pkgdown_sha: ~
-articles: []
+pandoc: 2.2.1
+pkgdown: 1.1.0.9000
+pkgdown_sha: bcf6299e76d4a398aadfc476b3ac22d253a91d35
+articles:
+  intro: intro.html
 
