--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: waterquality
 Title: Satellite Derived Water Quality Detection Algorithms
 Version: 0.0.12
-Authors@R: c(person("Richard", "Johansen", email = "johansra@mail.uc.edu", 
+Authors@R: c(person("Richard", "Johansen", email = "richard.johansen@uc.edu", 
     role = c("aut", "cre"), comment = c(ORCID = "0000-0003-4287-9677")),
     person("Jakub", "Nowosad", email="nowosad.jakub@gmail.com",
     role = c("aut"), comment = c(ORCID = "0000-0002-1057-3721")),
-    person("the U.S. Army Corps of Engineers", role = c("fnd")))
+    person("U.S. Army Corps of Engineers", role = c("fnd")))
 Description: The goal of 'waterquality' is to convert satellite-reflectance imagery
     to a host of pre-defined water quality algorithms designed for the detection of 
     cholorophyll-a, blue-green algae (Phycocyanin), and turbidity. 
