--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,6 +5,10 @@ Authors@R: c(person("Richard", "Johansen", email = "richard.johansen@uc.edu",
     role = c("aut", "cre"), comment = c(ORCID = "0000-0003-4287-9677")),
     person("Jakub", "Nowosad", email="nowosad.jakub@gmail.com",
     role = c("aut"), comment = c(ORCID = "0000-0002-1057-3721")),
+    person("Molly", "Reif", email="Molly.K.Reif@usace.army.mil",
+    role = c("aut"), comment = c(ORCID = "0000-0003-4207-1459")),
+    person("Erich", "Emery", email="Erich.B.Emery@usace.army.mil",
+    role = c("aut")),
     person("U.S. Army Corps of Engineers", role = c("fnd")))
 Description: The goal of 'waterquality' is to convert satellite-reflectance imagery
     to a host of pre-defined water quality algorithms designed for the detection of 
