--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,6 +1,6 @@
-pandoc: 1.19.2.1
-pkgdown: 1.1.0
-pkgdown_sha: ~
+pandoc: 2.3.1
+pkgdown: 1.1.0.9000
+pkgdown_sha: 72391933f693e1d9509edade4951486883d64382
 articles:
   waterquality_vignette: waterquality_vignette.html
 
