--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: waterquality
 Title: Satellite Derived Water Quality Detection Algorithms
-Version: 0.2.2
+Version: 0.2.3
 Authors@R: c(person("Richard", "Johansen", email = "richard.johansen@uc.edu", 
     role = c("aut", "cre"), comment = c(ORCID = "0000-0003-4287-9677")),
     person("Jakub", "Nowosad", email="nowosad.jakub@gmail.com",
@@ -12,7 +12,7 @@ Authors@R: c(person("Richard", "Johansen", email = "richard.johansen@uc.edu",
     person("U.S. Army Corps of Engineers", role = c("fnd")))
 Description: The goal of 'waterquality' is to convert satellite-reflectance imagery
     to a host of pre-defined water quality algorithms designed for the detection of 
-    chlorophyll-a, blue-green algae (Phycocyanin), and turbidity. 
+    chlorophyll-a, blue-green algae (Phycocyanin), and turbidity (Beck et al. (2017) <doi:10.3390/rs9060538>). 
     This package is able to process the following sensor configurations: 
     WorldView-2, Sentinel-2, Landsat-8, MODIS, and MERIS.
 Depends: R (>= 3.4.0)
