--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,6 +45,10 @@ export(TurbLath91RedOverBlue)
 export(TurbMoore80Red)
 export(Wy08CI)
 export(Zh10FLH)
+export(extract_lm)
+export(extract_lm_cv)
+export(extract_lm_cv_all)
+export(extract_lm_cv_multi)
 export(wq_calc)
 importFrom(methods,is)
 importFrom(raster,nlayers)
