Updated functions and namespace....i think

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,3 +54,6 @@ importFrom(methods,is)
 importFrom(raster,nlayers)
 importFrom(raster,overlay)
 importFrom(raster,stack)
+importFrom(stats,as.formula)
+importFrom(stats,lm)
+importFrom(stats,na.exclude)
