Added functions to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,7 +50,12 @@ export(extract_lm_cv)
 export(extract_lm_cv_all)
 export(extract_lm_cv_multi)
 export(wq_calc)
+importFrom(caret,getTrainPerf)
+importFrom(caret,train)
+importFrom(caret,trainControl)
 importFrom(methods,is)
+importFrom(purrr,map_chr)
+importFrom(purrr,map_dfr)
 importFrom(raster,nlayers)
 importFrom(raster,overlay)
 importFrom(raster,stack)
