--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: waterquality
 Title: Satellite Derived Water Quality Detection Algorithms
 Version: 0.2.3
-Authors@R: c(person("Richard", "Johansen", email = "richard.johansen@uc.edu", 
+Authors@R: c(person("Richard", "Johansen", email = "richard.a.johansen@erdc.dren.mil", 
     role = c("aut", "cre"), comment = c(ORCID = "0000-0003-4287-9677")),
     person("Jakub", "Nowosad", email="nowosad.jakub@gmail.com",
     role = c("aut"), comment = c(ORCID = "0000-0002-1057-3721")),
