--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,8 @@ export(MM092BDA)
 export(MM12NDCI)
 export(MM12NDCIalt)
 export(MM143BDAopt)
+export(Map_WQ_basemap)
+export(Map_WQ_raster)
 export(SI052BDA)
 export(SM122BDA)
 export(SY002BDA)
