--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ before_install:
   - sudo add-apt-repository ppa:ubuntugis/ubuntugis-unstable --yes
   - sudo apt-get --yes --force-yes update -qq
   - sudo apt-get install --yes libgdal-dev
+  - sudo apt-get install libudunits2-dev
 
 after_success:
   - Rscript -e 'covr::codecov()'
