Still working on documentation

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,11 +10,11 @@ Authors@R: c(person("Richard", "Johansen", email = "richard.a.johansen@erdc.dren
     person("Erich", "Emery", email="Erich.B.Emery@usace.army.mil",
     role = c("aut")),
     person("U.S. Army Corps of Engineers", role = c("fnd")))
-Description: The goal of 'waterquality' is to convert satellite-reflectance imagery
-    to a host of pre-defined water quality algorithms designed for the detection of 
-    chlorophyll-a, blue-green algae (Phycocyanin), and turbidity (Johansen et al. (2018) <doi:10.1016/j.hal.2018.05.001>). 
-    This package is able to process the following sensor configurations: 
-    WorldView-2, Sentinel-2, Landsat-8, MODIS, MERIS, and OLCI.
+Description: The main purpose of waterquality is to quickly and easily convert
+    satellite-based reflectance imagery into one or many well-known water quality
+    algorithms designed for the detection of harmful algal blooms or the following
+    pigment proxies: chlorophyll-a, blue-green algae (Phycocyanin), and Turbidity.
+    (Johansen et al. (2018) <doi:10.1016/j.hal.2018.05.001>). 
 Depends: R (>= 3.4.0)
 License: MIT + file LICENSE
 Encoding: UTF-8
