--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,7 @@ Description: The main purpose of waterquality is to quickly and easily convert
     satellite-based reflectance imagery into one or many well-known water quality
     algorithms designed for the detection of harmful algal blooms or the following
     pigment proxies: chlorophyll-a, blue-green algae (phycocyanin), and turbidity.
-    (Johansen et al. (2019) <http://dx.doi.org/10.21079/11681/35053>). 
+    Johansen et al. (2019) <doi:10.21079/11681/35053>. 
 Depends: R (>= 3.4.0)
 License: MIT + file LICENSE
 Encoding: UTF-8
