--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: waterquality
 Title: Satellite Derived Water Quality Detection Algorithms
-Version: 0.3.1
+Version: 1.0.0
 Authors@R: c(person("Richard", "Johansen", email = "richard.a.johansen@erdc.dren.mil", 
     role = c("aut", "cre"), comment = c(ORCID = "0000-0003-4287-9677")),
     person("Jakub", "Nowosad", email="nowosad.jakub@gmail.com",
@@ -26,8 +26,7 @@ Imports:
     purrr,
     caret,
     magrittr,
-    dplyr,
-    pingr
+    dplyr
 RoxygenNote: 7.2.3
 Suggests: 
     testthat,
